# threat-sim-engine

./: README.md  pyproject.toml
threat_sim/engine/: entity.py  traits.py
threat_sim/engine/networking/: device.py
threat_sim/engine/scenarios/: scenario.py
threat_sim/engine/security/: patches.py
threat_sim/engine/threats/: vulnerability.py
