[tool.poetry]
name = "py-threat-sim-engine"
version = "0.1.0"
description = ""
authors = ["Krystian Postek <krystian@postek.eu>"]
readme = "README.md"
packages = [{include = "py_threat_sim_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
